Product Backlog Item 2750901: SaaS App Tutorial: Freight Audit

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1059,6 +1059,8 @@
         href: framer-tutorial.md
       - name: Freedcamp
         href: freedcamp-tutorial.md
+      - name: Freight Audit
+        href: freight-audit-tutorial.md
       - name: FreshDesk
         href: freshdesk-tutorial.md
       - name: FreshGrade
