Product Backlog Item 2753589: SaaS App Tutorial: Alohi

--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -128,6 +128,8 @@
         href: allocadia-tutorial.md
       - name: Ally.io
         href: ally-tutorial.md
+      - name: Alohi
+        href: alohi-tutorial.md
       - name: Altamira HRM
         href: altamira-hrm-tutorial.md
       - name: Altoura
