Adding Service Now app link to configuration card

--- a/docs/permissions-management/index.yml
+++ b/docs/permissions-management/index.yml
@@ -83,6 +83,8 @@ landingContent:
             url: how-to-configure-aws-iam.md 
           - text: Okta identity provider   
             url: how-to-configure-okta-as-an-identity-provider.md
+          - text: ServiceNow app
+            url: how-to-configure-servicenow-application.md
   # Card
   - title: Reference 
     linkLists:
