--- a/docs/permissions-management/TOC.yml
+++ b/docs/permissions-management/TOC.yml
@@ -34,7 +34,7 @@
         href: how-to-configure-aws-iam.md
       - name: Configure Okta as an identity provider
         href: how-to-configure-okta-as-an-identity-provider.md 
-      - name: Configure the ServiceNow app for Microsoft Entra Permissions Management 
+      - name: Configure the ServiceNow app
         href: how-to-configure-servicenow-application.md
     - name: View information about your Authorization Systems
       expanded: false
