context-yml-fixes

--- a/docs/identity/app-proxy/context/app-proxy-context.yml
+++ b/docs/identity/app-proxy/context/app-proxy-context.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ContextObject
-brand: azure
-uhfHeaderId: azure
+brand: entra
+uhfHeaderId: MSDocsHeader-Entra
 breadcrumb_path: ../bread/toc.yml
 toc_rel: ../toc.yml
