--- a/docs/identity/domain-services/context/domain-services-context.yml
+++ b/docs/identity/domain-services/context/domain-services-context.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ContextObject
-brand: azure
-uhfHeaderId: azure
+brand: entra
+uhfHeaderId: MSDocsHeader-Entra
 breadcrumb_path: ../breadcrumb/TOC.yml
 toc_rel: ../TOC.yml
