--- a/docs/permissions-management/TOC.yml
+++ b/docs/permissions-management/TOC.yml
@@ -162,7 +162,7 @@
   - name: APIs      
     expanded: false
     items:
-    - name: Discover, remediate, and monitor
+    - name: Discover, remediate, and monitor permissions in your multicloud environment
       href: https://go.microsoft.com/fwlink/?linkid=2252615
   - name: Troubleshoot
     expanded: false
