--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -825,6 +825,9 @@
         - name: Application manifest
           displayName: app manifest
           href: reference-app-manifest.md
+        - name: Microsoft Graph application manifest
+          displayName: Microsoft Graph app manifest
+          href: reference-app-manifest.md
         - name: Redirect URI/reply URL restrictions and limitations
           href: reply-url.md
         - name: Validation differences by supported account types
