--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -21,20 +21,19 @@ jobs:
     - uses: actions/stale@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        days-before-pr-stale: 7
+        days-before-pr-stale: 90
         days-before-pr-close: 91
         stale-pr-label: 'no-pr-activity'
         close-pr-label: 'auto-close'
         stale-pr-message: > 
-           THIS IS A TEST - This pull request has been inactive for 7 days.
-           <br/>If you are finished with your changes, don't forget to sign off. See the [contributor guide](https://review.learn.microsoft.com/help/contribute/contribute-how-to-write-pull-request-automation) for instructions.
-           <br/>If this PR is inactive for 1 more days, it will be closed automatically. Thank you!
-               <br/>
-               <br/>Microsoft Entra Content Team
-           <br/>[Contact Us](mailto:apexidcontent@microsoft.com)      
+           This pull request has been inactive for 90 days. If you are finished with your changes, don't forget to sign off. See the [contributor guide](https://review.learn.microsoft.com/help/contribute/contribute-how-to-write-pull-request-automation) for instructions.
+           <br/>
+           <br/>If this PR is inactive for 1 more day, it will be closed automatically. Thank you!
+           <br/>
+           <br/>Microsoft Entra Content Team [Contact Us](mailto:apexidcontent@microsoft.com)      
         close-pr-message: >
-           <br/>This pull request has been inactive for 91 days. At this time, we're closing the PR. 
+           <br/>This pull request has been inactive for 91 days. At this time, we're closing the PR.
+           <br/>
            <br/>If you decide to continue working on your change, you can reopen the PR and continue working. Thank you!
            <br/>
-           <br/>Microsoft Entra Content Team
-           <br/>[Contact Us](mailto:apexidcontent@microsoft.com)
+           <br/>Microsoft Entra Content Team [Contact Us](mailto:apexidcontent@microsoft.com)
