--- a/docs/identity-platform/TOC.yml
+++ b/docs/identity-platform/TOC.yml
@@ -621,6 +621,8 @@
           href: howto-get-list-of-all-auth-library-apps.md
         - name: Migrate off email-based authorization
           href: migrate-off-email-claim-authorization.md
+        - name: Migrate to the Microsoft Graph app manifest
+          href: migrate-app-manifest.md
     - name: Deprecate
       items:
         - name: Remove an app registration
