--- a/docs/id-governance/TOC.yml
+++ b/docs/id-governance/TOC.yml
@@ -258,6 +258,8 @@
           href: customize-workflow-email.md
         - name: Check the status of a workflow
           href: check-status-workflow.md
+        - name: Download workflow history reports (Preview)
+          href: download-workflow-history.md  
         - name: Check execution user scope
           href: check-workflow-execution-scope.md  
         - name: Customize the schedule of workflows
