--- a/docs/identity/conditional-access/TOC.yml
+++ b/docs/identity/conditional-access/TOC.yml
@@ -108,7 +108,7 @@
       href: howto-conditional-access-policy-block-access.md
     - name: Require authentication strength for external users
       href: howto-conditional-access-policy-authentication-strength-external.md
-  - name: Microsoft managed policies
+  - name: Microsoft-managed policies
     href: managed-policies.md
   - name: Configure resilience defaults
     href: resilience-defaults.md
